--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "thinghiem-vatly",
   "private": true,
@@ -6,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-   "build": "vite build"
+    "build": "vite build",
     "preview": "vite preview"
-  },
+    },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
